Refactored to Java 11 files to development-java-11 Branch Modified all the Java and POM.xml files under projects/sitemanage except test package